--- a/00_html/03_markup.html
+++ b/00_html/03_markup.html
@@ -16,10 +16,10 @@
   <h1>프로그래밍 교육</h1>
   <nav>
     <a href="#python" style="text-decoration: none">
-      <img src="images/python.png" alt="python"/>
+      <img src="images\python.png" alt="python"/>
     </a>
     <a href="#web" style="text-decoration: none">
-      <img src="images/html.png" alt="웹"/>
+      <img src="images\html.png" alt="웹"/>
     </a>
     <a href="02_index.html">참고사이트</a>
     <a href="mailto:heewkk@gmail.com">메일 보내기</a>
