--- a/02_bootstrap/04_text.html
+++ b/02_bootstrap/04_text.html
@@ -4,31 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>border</title>
+  <title>text</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
-    div {
-      width: 100px;
-      height: 100px;
-    }
-  </style>
 </head>
-<body class="mb-5 ml-5">
-  <div class="border border-primary">경계를 파란색으로!</div>
-  <div class="border border-danger">빨간색 경계</div>
-  <br/>
+<body>
+  <p class="text-right">오른쪽으로 정렬</p>
+  <p class="text-center">가운데 정렬</p>
+  <hr>
 
-  <div class="border">이건 4군데 다 경계가 있음</div>
-  <br>
-  <div class="border-top">요건탑만</div>
-  <br>
-  <div class="border-right">요건오른쪽만</div>
-  <br>
-  <div class="border-left">요건왼쪽만</div>
-  <br>
+  <p class="text-lowercase">LOW</p>
+  <p class="text-uppercase">upper</p>
 
-  <img class="rounded-circle" src="zzzz.jpg" alt="고양이">
-  <img class="rounded-pill" src="zzzz.jpg" alt="고양이">
+
+  <p class="font-weight-bold">bold text</p>
+  <p class="font-weight-normal">normal text</p>
+  <p class="font-weight-light">light text</p>
+  <p class="font-italic">italic text</p>
+  <hr>
+  <!-- monospace -->
+  <p class="text-manospace">print('monospace zzzz')</p>
+
+
 
   <script src="https://code.jquery.com/jquery-2.2.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/aj3x3libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
