--- a/02_bootstrap/03_display_position.html
+++ b/02_bootstrap/03_display_position.html
@@ -4,31 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>border</title>
+  <title>display & Position</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
-    div {
-      width: 100px;
-      height: 100px;
-    }
-  </style>
 </head>
-<body class="mb-5 ml-5">
-  <div class="border border-primary">경계를 파란색으로!</div>
-  <div class="border border-danger">빨간색 경계</div>
-  <br/>
+<body class="position-relative">
+  <!-- div는 원래 블럭타입이지만 inline으로 만들수 있다. -->
+  <div class="d-inline p-2 bg-primary">div를 인라인으로 바꿔봄</div>
+  <div class="d-inline p-2 bg-primary">div를 인라인으로 바꿔봄</div>
+  <br>
+  <hr>
+  <!-- span은 원래 인라인 타입임 -->
+  <span class="d-block p-2 bg-primary">span을 블락으로</span>
+  <span class="d-block p-2 bg-dark text-white">span을 블락으로</span>
 
-  <div class="border">이건 4군데 다 경계가 있음</div>
+  <!-- 반응형 맛보기 -->
+  <div class="m-2 bg-danger d-sm-none d-md-block">sm md반응형 디스플레이</div>
+  <div class="m-2 bg-warning d-md-none d-xl-block">md xl반응형 디스플레이</div>
   <br>
-  <div class="border-top">요건탑만</div>
-  <br>
-  <div class="border-right">요건오른쪽만</div>
-  <br>
-  <div class="border-left">요건왼쪽만</div>
-  <br>
+  <hr>
 
-  <img class="rounded-circle" src="zzzz.jpg" alt="고양이">
-  <img class="rounded-pill" src="zzzz.jpg" alt="고양이">
+  <!-- 포지션 fixed -->
+  <div class="fixed-top bg-dark text-white">top</div>
+  <div class="fixed-bottom bg-dark text-white">copy right 2019 jason kim</div>
 
   <script src="https://code.jquery.com/jquery-2.2.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/aj3x3libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
